--- a/day-3/style.css
+++ b/day-3/style.css
@@ -23,20 +23,187 @@
   --txt-light-color: var(--gray-darker);
 }
 
+/* Reset */
+
+*,
+::after,
+::before {
+  /* reboot */
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
 }
 
+ul {
+  margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;
+}
+
+a, button {
+  cursor: pointer;
+}
+
+a:visited {
+  outline: none;
+}
+
+button {
+  border: 0;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: 0;
+}
+
+button:disabled {
+  cursor: initial;
+}
+
+/* Tipografia */
+
+body {
+  font-family: Montserrat, sans-serif;
+}
 
 .display {
   color: var(--white);
-  font-size: 4em;
+  font-size: 4rem;
 }
 
-.section.title {
+.title {
+  font-size: 2rem;
+  line-height: 3rem;
+}
+
+.title .highlight {
+  position: relative;
+  z-index: 0;
+}
+
+.title .highlight::after {
+  content: '';
   
+  height: 0.75rem;
+
+  position: absolute;
+  bottom: -0.3rem;
+  left: 0;
+  right: 0;
+  z-index: -1;
+
+  background-color: var(--gray-light);
+  border-radius: 0.3rem;
+}
+
+.body {
+  font-size: 1.5rem;
+}
+
+.link {
+  color: var(--txt-primary-color);
+  text-decoration: underline;
+}
+
+/* Botões */
+.btn {
+  padding: 1rem 2rem;
+  border-radius: 0.25rem;
+
+  font-family: Montserrat, sans-serif;
+}
+
+.btn-primary {
+  color: var(--txt-primary-color-contrast);
+  background-color: var(--primary-color);
+}
+.btn-primary:hover {
+  opacity: 0.8;
+}
+.btn-primary:active {
+  opacity: 1;
+}
+.btn-primary:disabled,
+.btn-primary:hover:disabled {
+  opacity: 0.6;
+}
+
+/* Main */
+.main {
+  background-color: var(--bg-gray-color);
+}
+
+/* Header e Footer  */
+.footer,
+.header {
+  background-color: var(--bg-dark-color);
+  color: var(--txt-primary-color-contrast);
+}
+
+.header {
+  padding: 1.5rem;
+}
+
+.footer {
+  padding: 6.5rem;
+}
+
+.footer .disclaimer {
+  font-size: 4.5rem;
+  font-weight: 100;
+}
+
+.footer hr {
+  border: none;
+  border-bottom: 1px solid var(--gray);
+  opacity: 0.2;
+}
+
+/* Hero */
+.hero {
+  background-color: var(--bg-dark-color);
+  padding: 3rem 6.5rem;
+  color: var(--txt-primary-color-contrast);
+}
+
+.hero a {
+  text-decoration: underline;
+  color: var(--txt-primary-color-contrast);
+}
+
+.hero a:visited {
+  color: var(--txt-primary-color-contrast);
+}
+
+/* Outros componentes */
+.nav-item {
+  display: inline-block;
+}
+
+ul li.nav-item:last-child {
+  border-left: 1px solid var(--gray);
+}
+
+.section {
+  padding: 6.5rem;
+}
+
+.section .title {
+  color: var(--txt-primary-color);
 }
