--- a/day-3-answers/card/card.css
+++ b/day-3-answers/card/card.css
@@ -3,51 +3,53 @@ body {
 }
 
 .card {
-    background-color: #FFFFFF;
-    border-radius: 20px;
+    background-color: transparent;
     width: 300px;
     height: 300px;
     padding: 30px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: column;
     font-family: 'Work Sans', sans-serif;
-    
+    transition: box-shadow 0.3s, background-color 0.3s;
 }   
 
+.card:hover {
+    background-color: white;
+    box-shadow: 5px 5px 20px;
+    cursor: pointer;    
+}
+
 .tag {
-    background-color: #9999FF;
-    height: 30px;
-    width: 200px;
-    border-radius: 12px;
+    background-color: #2e2f35;
+    height: 32px;
+    width: fit-content;
+    border-radius: 16px;
     display: flex;
     align-items: center;
+    padding: 1px 16px;
 }
 
 .circle {
     height: 20px;
     width: 20px;
     border-radius: 10px;
-    margin: 2px 2px 2px 10px;
-    background-color: #5555FF;
+    background-color: #fe763e;
+    margin-right: 10px;
     
 }
 
 .course {
     color: #FFFFFF;
-    margin: auto 20px;
 
 }
 
-.css {
+.icon {
     font-size: 50px;
     margin-right: 20px;
-    color: #5555FF;
+    color: #2e2f35;
 }
 
-.card-title{
-    
-}
 .module-wrapper {
     display: flex;
 
@@ -59,7 +61,6 @@ body {
 }
 
 .module {
-    color: #5555FF;
     font-size: 1.2rem;
     font-weight: bold;
 }
