--- a/day-3-answers/style.css
+++ b/day-3-answers/style.css
@@ -90,6 +90,7 @@ body {
 .title {
   font-size: 2rem;
   line-height: 3rem;
+  margin-bottom: 0.2rem;
 }
 
 .title .highlight {
@@ -245,6 +246,76 @@ body {
   padding-top: 6.5rem;
 }
 
+/* Cards */
+.card {
+  width: 20rem;
+  height: 25rem;
+  padding: 2.5rem;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  transition: box-shadow 0.3s, background-color 0.3s;
+  border-radius: 1rem;
+}
+
+.card:hover {
+  background-color: white;
+  box-shadow: 0px 10px 50px 0px rgba(0,0,0,0.35);
+  cursor: pointer;
+}
+
+.tag {
+  height: 2rem;
+  width: fit-content;
+  
+  padding: 0.1rem 1rem;
+  display: flex;
+  align-items: center;
+  
+  background-color: #2e2f35;
+  color: #ffffff;
+
+  border-radius: 1rem;
+}
+
+.circle {
+  height: 1.2rem;
+  width: 1.2rem;
+  border-radius: 1.2rem;
+  background-color: #fe763e;
+  margin-right: 0.5rem;
+}
+
+.icon {
+  font-size: 4rem;
+  color: #2e2f35;
+}
+
+/* Grid */
+.row {
+  display: flex;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.spacer-xsmall.vertical {
+  height: 0.5rem;
+  flex-basis: 0.5rem;
+}
+
+.spacer-medium.horizontal {
+  width: 2rem;
+  flex-basis: 2rem;
+}
+
+/* Custom grid */
+.card-list {
+  justify-content: space-between;
+}
+
 /* Hero image */
 
 #hero-image {
@@ -270,3 +341,4 @@ body {
   top: 0;
   right: 0;
 }
+
