--- a/day-3/card/card.css
+++ b/day-3/card/card.css
@@ -1,44 +1,40 @@
 body {
-    background-color: #EEE;
+  background-color: #eee;
 }
 
 .card {
-    background-color: #FFFFFF;
-    font-family: 'Work Sans', sans-serif;
-    width: 300px;
-    height: 300px;
-    padding: 30px;
-    
-}   
+  background-color: #ffffff;
+  font-family: "Work Sans", sans-serif;
+  width: 300px;
+  height: 300px;
+  padding: 30px;
+}
 
 .tag {
-    background-color: #9999FF;
-    border-radius: 12px;
-    
+  background-color: #9999ff;
+  border-radius: 12px;
 }
 
 .circle {
-    height: 20px;
-    width: 20px;
-    border-radius: 10px;
-    background-color: #5555FF;
-    
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
+  background-color: #5555ff;
 }
 
 .course {
-    color: #FFFFFF;
-    margin: auto 20px;
-
+  color: #ffffff;
+  margin: auto 20px;
 }
 
 .icon {
-    font-size: 50px;
-    margin-right: 20px;
-    color: #5555FF;
+  font-size: 50px;
+  margin-right: 20px;
+  color: #5555ff;
 }
 
 .module {
-    color: #5555FF;
-    font-size: 1.2rem;
-    font-weight: bold;
+  color: #5555ff;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
