Add day-4 answers

--- a/day-4-answers/float-button/float-button.css
+++ b/day-4-answers/float-button/float-button.css
@@ -11,3 +11,14 @@
 .float-button:focus {
   outline: none;
 }
+
+.float-button {
+  position: fixed;
+  bottom: 35px;
+  right: 35px;
+}
+
+#content {
+  width: 150px;
+  background-color: #ccc;
+}
